--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0-M1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0-M1'
 }
+run {
+    standardInput = System.in
+}
 
 test {
     useJUnitPlatform()
