--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'application'
+    id 'checkstyle'
 }
 
 group 'hexlet.code'
@@ -26,4 +27,8 @@ run {
 
 test {
     useJUnitPlatform()
+}
+
+checkstyle {
+    toolVersion '9.2.1'
 }
